# crazyVM

./: .gitignore  Cargo.toml  LICENSE  README.md  casm.vim
common/: Cargo.toml
common/src/: instructions.rs  lib.rs  machine.rs  registers.rs
common/src/data_structures/: mod.rs  ram.rs  rom.rs
crassembler/: Cargo.toml
crassembler/src/: main.rs
editor/: casm-mode.el  casm.vim
macros/: Cargo.toml
macros/src/: lib.rs
src/lib/common/: instructions.rs  registers.rs
vm/: Cargo.toml
vm/src/: machine.rs  main.rs  tests.rs  utils.rs
vm/src/data_structures/: error.rs
